Fixed sidebar, removed JS dependency on mobile devices (will clean code after testing)

--- a/app/assets/stylesheets/cleantheme.scss
+++ b/app/assets/stylesheets/cleantheme.scss
@@ -154,34 +154,6 @@ nav {
     left:-5px;
   }
 
-#container-right {
-  width: 20%;
-  box-shadow: -3px 1px 5px #777;
-  float:none;
-  display:table-cell;
-  vertical-align:top;
-  position:relative
-}
-
-#container-right-fixed:before {
-  content:'';
-  height:81px;
-  width:100%;
-  background-color:inherit;
-  display:inline-block;
-  position: absolute;
-  top:-81px;
-}
-
-#container-right-fixed {
-  position:fixed;
-  z-index:100;
-  background-color: #5999DE;
-  width: inherit;
-  box-shadow:0px 3px 3px #ddd;
-  padding-top:20px;
-  padding-bottom:20px;
-}
 
 /* USER SIDEBAR */
 
