--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -1,8 +1,3 @@
-body.slide-active {
-  // overflow-x: hidden;
-  // overflow-y: hidden;
-}
-
 #slide-nav .navbar-toggle {
     cursor: pointer;
     position: relative;
@@ -25,7 +20,7 @@ body.slide-active {
     background-color: white;
 }
 
-#slide-nav .navbar-toggle.slide-active .icon-bar {
+#slide-nav .navbar-toggle.active-sidebar .icon-bar {
   background-color: orange;
 }
 
@@ -33,25 +28,72 @@ body.slide-active {
     position: relative
 }
 
-nav.slide-active {
-  padding-top: 25px;
-  padding-bottom:15px;
-}
-
-.navbar-brand.slide-active {
-  position:absolute;
-}
 
 #container-left {
     width:80%;
-    float:left;
     padding: 70px;
+    display:table-cell;
+    vertical-align:top;
+    float:none;
   }
+
+#container-right {
+  width: 20%;
+  box-shadow: -3px 1px 5px #777;
+  background-color: #5999DE;
+  float:none;
+  display:table-cell;
+  vertical-align:top;
+}
+
+
+#container-right-fixed:before {
+  content:'';
+  height:81px;
+  width:100%;
+  background-color:inherit;
+  display:inline-block;
+  position: absolute;
+  top:-81px;
+}
+
+#container-right-fixed {
+  position:fixed;
+  z-index:100;
+  background-color: #5999DE;
+  width: inherit;
+  box-shadow:0px 3px 3px #ddd;
+  padding-top:20px;
+  padding-bottom:20px;
+}
+
+/* TESTING FOR MOBILE */
+#container-right-notfixed:before {
+  content:'';
+  height:81px;
+  width:100%;
+  background-color:inherit;
+  display:inline-block;
+  position: absolute;
+  top:-81px;
+}
+#container-right-notfixed {
+  background-color: #5999DE;
+  box-shadow:0px 3px 3px #ddd;
+  padding-top:20px;
+  padding-bottom:20px;
+}
 
 @media (min-width: 1600px) {
   .user-picture {
     float:right;
     margin-right:15px;
+  }
+}
+@media (min-width: 992px) {
+  #container-right-notfixed {
+    position:fixed;
+    z-index:100;
   }
 }
 @media (max-width: 992px) {
@@ -67,20 +109,43 @@ nav.slide-active {
 
 }
 @media (max-width: 768px) {
-  // #user-profile-header-picture {
-  //   text-align:center;
-  // }
-  #container-left {
+  #container-left.no-js {
     width:100%;
     margin:0px;
     padding: 25px;
   }
-  #container-right {
-    position:absolute;
-    left: 100%;
-    float:right;
+  #container-right.no-js {
+    width:100%;
     margin:0px;
   }
+
+
+  //New methods
+  #container-left.js {
+    width:100%;
+    margin:0px;
+    padding: 25px;
+    margin-left:0;
+    float:left;
+  }
+  #container-left.js.active-sidebar {
+    margin-left:-60%;
+  }
+
+  #container-right.js {
+    margin-right:-200%;
+    float:left;
+  }
+  #container-right.active-sidebar {
+    margin-left:0;
+    width:60%;
+    #container-right-notfixed {
+      width:100%;
+    }
+  }
+
+
+
   .content-main-header {
     padding: 25px 15px 15px 15px;
   }
